add: WiFi access point setup

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,28 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+;packages_dir = ${sysenv.DEVENV_STATE}/platformio/packages
+extra_configs =
+    ${sysenv.DEVENV_STATE}/platformio/overrides.ini
+    overrides.ini
+
 [env]
 platform = ststm32
 framework = arduino
 
-[env:one]
+[env:stm]
 board = genericSTM32F411CE
 ; change microcontroller
 board_build.mcu = stm32f411ceu6
+
+[env:uno]
+platform = renesas-ra
+board = uno_r4_wifi
+
+[env:mqtt]
+platform = renesas-ra
+board = uno_r4_wifi
+build_src_filter = +<mqtt> +<mqtt/*.cpp>
+lib_deps =
+    arduino-libraries/ArduinoMqttClient@^0.1.8
