--- a/.github/workflows/devenv.yml
+++ b/.github/workflows/devenv.yml
@@ -21,10 +21,11 @@ jobs:
         run: nix profile install --accept-flake-config tarball+https://install.devenv.sh/latest
       - name: Build the devenv shell and run any pre-commit hooks
         run: devenv ci
+
       - name: Run a single command in the devenv shell
         run: devenv shell build ${{ matrix.target }}
+
       - uses: actions/upload-artifact@v4
         with:
-          name: firmware
-          working-directory: .pio/build
-          path: '**/firmware.*'
+          name: firmware-${{ matrix.target }}
+          path: .pio/build/${{ matrix.target }}/firmware.*
