black: add board configuration files for mbed

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,6 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-;packages_dir = ${sysenv.DEVENV_STATE}/platformio/packages
 extra_configs =
     ${sysenv.DEVENV_STATE}/platformio/overrides.ini
     overrides.ini
@@ -18,18 +17,24 @@ extra_configs =
 platform = ststm32
 framework = arduino
 
-[env:stm]
-board = genericSTM32F411CE
-; change microcontroller
-board_build.mcu = stm32f411ceu6
+[env:blackpill]
+platform = ststm32
+framework = mbed
+board = blackpill_f411ce
+board_build.mbed.ldscript = $PROJECT_SRC_DIR/boards/BLACKPILL_F411CE/TOOLCHAIN_GCC_ARM/stm32f411xe.ld
+build_flags =
+    -I$PROJECT_SRC_DIR/boards/BLACKPILL_F411CE
+
+[env:monitor]
+extends = env:blackpill
+build_src_filter = +<monitor> +<monitor/**/*.cpp>
 
 [env:uno]
 platform = renesas-ra
 board = uno_r4_wifi
 
 [env:mqtt]
-platform = renesas-ra
-board = uno_r4_wifi
+extends = env:uno
 build_src_filter = +<mqtt> +<mqtt/*.cpp>
 lib_deps =
     arduino-libraries/ArduinoMqttClient@^0.1.8
