--- a/.github/workflows/devenv.yml
+++ b/.github/workflows/devenv.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     strategy:
       matrix:
-        target: [mqtt]
+        target: [mqtt, monitor]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
