wifi client mode for R4

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,27 +14,62 @@ extra_configs =
     overrides.ini
 
 [env]
-platform = ststm32
 framework = arduino
+extra_scripts =
+    shared/configure.py
+build_unflags =
+    -std=gnu++17
+    -std=gnu++14
+    -std=gnu++11
+    -std=c++17
+    -std=c++14
+    -std=c++11
+build_flags = -std=c++23
 
-[env:blackpill]
+[blackpill]
 platform = ststm32
-framework = mbed
+upload_protocol = dfu
 board = blackpill_f411ce
+
+[bpMbed]
+extends = blackpill
+framework = mbed
+board = my_blackpill_f411ce
 board_build.mbed.ldscript = $PROJECT_SRC_DIR/boards/BLACKPILL_F411CE/TOOLCHAIN_GCC_ARM/stm32f411xe.ld
 build_flags =
+    ${env.build_flags}
     -I$PROJECT_SRC_DIR/boards/BLACKPILL_F411CE
 
-[env:monitor]
-extends = env:blackpill
-build_src_filter = +<monitor> +<monitor/**/*.cpp>
-
-[env:uno]
+[arduinoR4]
 platform = renesas-ra
 board = uno_r4_wifi
 
+
+;;;
+; Arduino R4 board
+;;;
+
 [env:mqtt]
-extends = env:uno
+extends = arduinoR4
 build_src_filter = +<mqtt> +<mqtt/*.cpp>
 lib_deps =
     arduino-libraries/ArduinoMqttClient@^0.1.8
+    arduino-libraries/ArduinoGraphics@^1.1.2
+
+[env:serial]
+extends = arduinoR4
+build_src_filter = +<serial.cpp>
+
+
+;;;
+; BlackPill v3.0 board
+;;;
+
+[env:monitor]
+extends = bpMbed
+build_src_filter = +<monitor> +<monitor/**/*.cpp>
+
+[env:ardu]
+extends = blackpill
+framework = arduino
+build_src_filter = +<Blink.cpp>
