r4: implement WiFI HTTP handler and ADC reading

--- a/platformio.ini
+++ b/platformio.ini
@@ -41,8 +41,11 @@ build_flags =
     -I$PROJECT_SRC_DIR/boards/BLACKPILL_F411CE
 
 [arduinoR4]
+framework = arduino
 platform = renesas-ra
 board = uno_r4_wifi
+; upload_port = /dev/serial/by-id/usb-Arduino_UNO_WiFi_R4_CMSIS-DAP_F412FA76619C-if01
+;upload_protocol = cmsis-dap
 
 
 ;;;
@@ -53,7 +56,7 @@ board = uno_r4_wifi
 extends = arduinoR4
 build_src_filter = +<mqtt> +<mqtt/*.cpp>
 lib_deps =
-    arduino-libraries/ArduinoMqttClient@^0.1.8
+;    arduino-libraries/ArduinoMqttClient@^0.1.8
     arduino-libraries/ArduinoGraphics@^1.1.2
 
 [env:serial]
