--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ extra_configs =
     overrides.ini
 
 [env]
+test_framework = googletest
 framework = arduino
 extra_scripts =
     shared/configure.py
@@ -76,3 +77,7 @@ build_src_filter = +<monitor> +<monitor/**/*.cpp>
 extends = blackpill
 framework = arduino
 build_src_filter = +<Blink.cpp>
+
+[env:native]
+framework =
+platform = native
